--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Danish Mansoori</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<html>
+<body>
+    <div>
+        <h1 class="titleheader"> Hi my name is Danish Mansoori</h1>
+        <h2> I want a 100k </h2>
+        <button button id ="Linked-Button">LinkedIn</button>
+    </div>
+    <script src="/main.js"></script>
+    </html>
+<body>
